up to date, data ethics

--- a/notes/ask.tex
+++ b/notes/ask.tex
@@ -1,6 +1,6 @@
-% nta: esta parte podría reeditarse para agregar info de destrezas, en especial las que involucren a stakeholders, reuniones y otros
+% nta: ahora el ciclo de vida pasa a secciones, con tal de mantener orden en secciones y subsecciones
 
-\subsection{\textit{Ask} - Preguntar}
+\section{\textit{Ask} - Preguntar}
 Se establece un \textbf{Desafío/Objetivo Empresarial}, y las características de lo que se considera exitoso. Para esto es necesario comprender las expectativas de los \gls{stkhldrs}, junto a desafíos o preconcepciones anteriores. Algunas técnicas o métodos a aplicar incluyen
 \begin{itemize}
     \item {\gls{strctrdthnkng}}
@@ -8,7 +8,7 @@ Se establece un \textbf{Desafío/Objetivo Empresarial}, y las características d
     \item {\gls{gpnlss}, para encontrar déficits en el proyecto}
 \end{itemize}
 
-\subsubsection{Tipos de Problemas}
+\subsection{Tipos de Problemas}
 \begin{itemize}
     \item {\textbf{Realizar Predicciones} : Decisiones informadas para visualizar las cosas a futuro}
     \item {\textbf{Categorizar Cosas} : Asignar información a dos grupos de datos distintos con cualidades comunes}
@@ -19,7 +19,7 @@ Se establece un \textbf{Desafío/Objetivo Empresarial}, y las características d
 \end{itemize}
 
 
-\subsubsection{Preguntas \textit{SMART}}
+\subsection{Preguntas \textit{SMART}}
 Preguntas altamente efectivas y usualmente abiertas, que incitan a respuestas útiles. \textit{Esto contrasta con las preguntas \textbf{sugestivas} con respuestas en particular,\textbf{imprecisas} que no ofrecen \gls{cntxt}, y \textbf{cerradas} con respuestas breves o de una sola palabra}
 \begin{description}
     \item [\textit{Specific}]{ : Simples y enfocadas en una cantidad pequeña de ideas relacionadas entre si. \textbf{Esta pregunta tiene el \gls{cntxt} necesario, aborda el problema o entrega la respuesta que necesito?}}
@@ -29,10 +29,10 @@ Preguntas altamente efectivas y usualmente abiertas, que incitan a respuestas ú
     \item [\textit{Time-Bound}]{ : Son específicas al periodo de tiempo estudiado. \textbf{La pregunta es relevante para el periodo establecido?}}
 \end{description}
 
-\subsubsection{Comunicación Clara y Efectiva}
+\subsection{Comunicación Clara y Efectiva}
 Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equipo a través de buenas prácticas de diálogo. \textit{Es importante tomar en cuenta \textbf{quién} es la audiencia, \textbf{qué saben} previamente y \textbf{qué necesitan} saber}
 
-\paragraph{Identificar antes de Comunicar}
+\subsubsection{Identificar antes de Comunicar}
 \begin{itemize}
     \item {\textbf{Hechos} y datos concretos}
     \item {\textbf{\gls{cntxt}} y cualquier cosa que facilite la comprensión}
@@ -40,7 +40,7 @@ Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equi
     \item {\textbf{Temas comunes} para preguntas, como objetivos, recursos y seguridad}
 \end{itemize}
 
-\paragraph{Tips para Comunicación Efectiva}
+\subsubsection{Tips para Comunicación Efectiva}
 \begin{itemize}
     \item {Aprender en el camino y realizar preguntas}
     \item {Practicar buenos hábitos de escritura para diálogo por escrito. Leer en voz alta antes de enviar la conversación}
@@ -48,14 +48,14 @@ Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equi
     \item {Ser claro con las necesidades, al igual que la historia a contar a través de los datos}
 \end{itemize}
 
-\paragraph{Balance de Expectativas y Objetivos}
+\subsubsection{Balance de Expectativas y Objetivos}
 \begin{itemize}
     \item {Ser razonables y realistas al establecer plazos y metas}
     \item {Identificar desafíos y problemas con anticipación, además de posibles soluciones}
     \item {Resolver conflictos al replantear el problema, determinar el contexto detrás del conflicto, y tener un diálogo con altura de miras}
 \end{itemize}
 
-\subsubsection{\gls{stkhldrs} más Comunes}
+\subsection{\gls{stkhldrs} más Comunes}
 \begin{itemize}
     \item {\textbf{Equipo Ejecutivo} : Proporciona liderazgo estratégico y operativo a la empresa. Generalmente están muy ocupados, por lo que se trabaja con el jefe/gerente de proyecto. \textit{Ejemplos : Vicepresidentes, Directores de Marketing, Profesionales}}
     \item {\textbf{Equipo Orientado al Cliente} : Cualquier persona en la organización que tenga algún nivel de interacción con clientes, actuales y potenciales}
@@ -66,6 +66,5 @@ Mantención de buenas relaciones con colegas, \gls{stkhldrs} y miembros del equi
         \item[Científico de Datos]{ : Creación de modelos y exploración de lo desconocido usando datos sin editar, para encontrar preguntas y problemas nuevos}
     \end{description}}
 \end{itemize}
-
 
 \newpage
