--- a/notes/ciclo_datos.tex
+++ b/notes/ciclo_datos.tex
@@ -8,10 +8,14 @@
         \item {Características de los datos a tomar: qué tipo, cómo obtenerlos, quién los administra, resultados óptimos}
         \item {Qué tipos de datos se necesitan? Cómo se gestionarán? Quién será el responsable de ellos}
     \end{itemize}}
-    \item {\textbf{\textit{Capture} - Captura} :
+    \item {\textbf{\textit{Capture} - Captura} : Recolección de datos a través de diferentes herramientas y fuentes como entrevistas, observaciones, \textit{cookies}, formularios, cuestionarios, encuestas y sets preexistentes de datos. Una mala fuente de datos es sesgada, incompleta e incorrecta. Una \textbf{buena fuente de datos} tiene las siguientes características
     \begin{itemize}
-        \item {Recolección de datos desde distintas fuentes como DB, Archivos, Encuestas...}
-    \end{itemize}}
+            \item {\textit{\textbf{R} eliable} - Confiable}
+            \item {\textit{\textbf{O} riginal}}
+            \item {\textit{\textbf{C} omprehensive - Exhaustivo}}
+            \item {\textit{\textbf{C} urrent} - Actual}
+            \item {\textit{\textbf{C} ited} - Citado}
+        \end{itemize}}
     \item {\textbf{\textit{Manage} - Mantención} :
     \begin{itemize}
         \item {Cuidado de los datos, almacenamiento y seguridad}
