--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -21,7 +21,7 @@
 \newglossaryentry{oprtr}{
     name = Operador,
     sort = {operador},
-    description = {Símbolo que nombra el tipo de operación o cálculo matemático a realizar}
+    description = {Símbolo que nombra el tipo de operación o cálculo matemático a realizar. \textit{Ejemplos : operadores lógicos and, or, not}}
 }
 
 \newglossaryentry{algrthm}{
@@ -88,6 +88,48 @@
     name = \textit{Gap Analysis} - Análisis de Déficit,
     sort = {analisis deficit},
     description = {Método de evaluación y examinación de un proceso y cómo funciona actualmente, en contraste con la meta y estado ideal}
+}
+
+\newglossaryentry{bias}{
+    name = Sesgo,
+    sort = {sesgo},
+    description = {Preferencia, a favor o en contra, subconsciente o no, respecto a una persona, grupo de personas o cosas. Algunos ejemplos incluyen 
+    \begin{itemize}
+        \item {\textbf{\textit{Sampling Bias} - Sesgo de Muestreo} : cuando una muestra no es representativa de la población}
+        \item {\textbf{\textit{Observer Bias} - Sesgo del Observador} : también llamado \textbf{del Investigador}, cuando dos personas tienden a observar cosas de forma distinta}
+        \item{\textbf{\textit{Interpretation Bias} - Sesgo de Interpretación} : tendencia a interpretar situaciones de forma positiva o negativa}
+        \item {\textbf{\textit{Confirmation Bias} - Sesgo de Confirmación} : tendencia a buscar o interpretar información de tal forma que confirma suposiciones preexistentes}
+    \end{itemize}}
+}
+
+\newglossaryentry{dtbs}{
+    name = Sesgo de Datos,
+    sort = {sesgo datos},
+    description = {Tipo de error que sistemáticamente distorsiona los resultados hacia cierta dirección}
+}
+
+\newglossaryentry{ppltn}{
+    name = Población,
+    sort = {poblacion},
+    description = {Todos los valores posibles en un set de datos}
+}
+
+\newglossaryentry{smpl}{
+    name = Muestra,
+    sort = {muestra},
+    description = {Parte de una población, y que es representativa de la misma}
+}
+
+\newglossaryentry{datatype}{
+    name = \textit{Data Type},
+    sort = {data type},
+    description = {Descripción del tipo de valor que cierto atributo posee. \textit{Ejemplos : number, str/text ( secuencias de carácteres y puntuación con información textual), bool (verdadero o falso en base a condiciones lógicas)}}
+}
+
+\newglossaryentry{ethcs}{
+    name = Ética,
+    sort = {etica},
+    description = {Estándares bien establecidos sobre lo correcto e incorrecto, que establece lo que los humanos deben hacer y cumplir, en términos de derechos, obligaciones, beneficios a la sociedad, igualdad o virtudes en específico}
 }
 
 \glsaddallunused
