--- a/notes/herramientas.tex
+++ b/notes/herramientas.tex
@@ -2,7 +2,7 @@
 
 \subsection{\textit{Spreadsheets} - Hojas de Cálculo}
 \begin{description}
-    \item[Celda]{ : Posición descrita usando filas y columnas. \textit{Ejemplo : columna A fila 3 = A3}
+    \item[Celda]{ : Posición descrita usando filas \textbf{o registros/\textit{records}} y columnas \textbf{o campos/\textit{fields}}. \textit{Ejemplo : columna A fila 3 = A3}. 
     \begin{description}
         \item[Referencia Relativa]{ : El valor de la celda cambia junto con la fórmula donde está presente, al arrastrarla o copiarla en otro lugar}
         \item[Referencia Absoluta]{ : El valor de la celda es fijo y no cambia con movimientos en fórmulas o celdas.\textit{Para realizar cambio entre absoluto y relativo, presionar F4}}
