--- a/notes/main.tex
+++ b/notes/main.tex
@@ -64,6 +64,8 @@
 \input{ciclo_datos}
 \input{destrezas}
 \input{herramientas}
+\input{ask}
+\input{prepare}
 \input{fases_add}
 \input{otros_f_add}
 \input{problemas}
