U3 done, starting with U4

--- a/notes/class.tex
+++ b/notes/class.tex
@@ -1,4 +1,50 @@
-\section{Tipos de Datos}
+\section{Clasificación de Datos}
+\subsection{Por Objetividad y Capacidad de Medición}
+\begin{itemize}
+    \item{\textbf{Cuantitativos} : Cuentan con hechos numéricos, medidas específicas y objetivas. \textit{Qué cosas, cuántas, qué tan seguido?} Se subdividen en dos tipos:
+    \begin{itemize}
+        \item{\textbf{Discretos} : Son cuantificables y tienen un número limitado de valores}
+        \item{\textbf{Contínuos} : Se miden y pueden tener casi cualquier valor numérico}
+    \end{itemize}}
+    \item{\textbf{Cualitativos} : Medidas subjetivas o explanatorias para cualidades y características. \textit{Por qué? Cómo?} Estos datos también se dividen en
+    \begin{itemize}
+        \item{\textbf{Nominal} : No presentan estructura o secuencia aparente}
+        \item{\textbf{Ordinal} : Pueden ordenarse en base a características}
+    \end{itemize}}
+\end{itemize}
+
+\subsection{Por Cercanía a sus Fuentes}
+\begin{itemize}
+    \item {\textbf{\textit{$1^{\text{st}}$ party data} - de Primera Fuente} : Datos recolectados por un individuo o grupo, utilizando recursos propios}
+    \item {\textbf{\textit{$2^{\text{nd}}$ party data} - de Segunda Fuente} : Datos recolectados por un grupo, directamente desde su audiencia, y que luego se venden}
+    \item {\textbf{\textit{$3^{\text{rd}}$ party data} - de Tercera Fuente} : Datos recolectados desde fuentes externas, que no los capturaron directamente}
+\end{itemize}
+
+\subsection{Por Ubicación}
+\begin{itemize}
+    \item {\textbf{Internos} : Datos que viven dentro de los sistemas de la compañía o empresa}
+    \item {\textbf{Externos} : Datos que viven o son generados fuera de la organización}
+\end{itemize}
+
+\subsection{Por Nivel de Organización}
+\begin{itemize}
+    \item {\textbf{Estructurados} : Corresponden a datos definidos, a menudo \textbf{cuantitativos}, organizados en formatos específicos como filas y columnas. Son fáciles de ordenar, buscar y analizar. \textit{Ejemplos : registros telefónicos, Excel, DB SQL}}
+    \item {\textbf{No Estructurados} : Datos variados, a menudo \textbf{cualitativos}, que no muestran alguna manera fácil de organizar. Proporcionan libertad de análisis, pero son más difíciles de buscar. \textbf{Representan la mayoría de los datos en el mundo.} \textit{Ejemplos : DB NOSQL, SMS, fotos y videos, archivos}}
+\end{itemize}
+
+\subsection{Por Formato}
+\begin{itemize}
+    \item {\textbf{\textit{Wide Data} - Formato Ancho} : Cada elemento de dato tiene un solo registro o fila, con múltiples campos que contienen los valores para sus atributos. Preferir cuando
+    \begin{itemize}
+        \item {Se crean tablas o gráficos con pocas variables sobre cada tema}
+        \item {Se comparan gráficos lineales sencillos}
+    \end{itemize}}
+    \item {\textbf{\textit{Long Data} - Formato Corto} : Cada registro se relaciona con un valor por atributo, así que cada elemento tendrá datos a través de múltiples registros. Preferir cuando
+    \begin{itemize}
+        \item {Se almacenan muchas variables sobre cada tema}
+        \item {Se realizan análisis estadísticos avanzados o gráficos}
+    \end{itemize}}
+\end{itemize}
 
 \subsection{Por Tamaño}
 \begin{itemize}
