--- a/notes/gloss.tex
+++ b/notes/gloss.tex
@@ -132,4 +132,28 @@
     description = {Estándares bien establecidos sobre lo correcto e incorrecto, que establece lo que los humanos deben hacer y cumplir, en términos de derechos, obligaciones, beneficios a la sociedad, igualdad o virtudes en específico}
 }
 
+\newglossaryentry{qry}{
+    name = \textit{Query} - Consulta,
+    sort = {query},
+    description = {Petición a una DB para obtener y manipular datos}
+}
+
+\newglossaryentry{dtgvrnnc}{
+    name = \textit{Data Governance} - Gobernanza de Datos,
+    sort = {data governance},
+    description = {Proceso para asegurar el manejo formal de los activos de datos de una compañía}
+}
+
+\newglossaryentry{csv}{
+    name = \textit{Comma-Separated Values},
+    sort = {csv},
+    description = {Formato en que los valores se separan por comas}
+}
+
+\newglossaryentry{rgx}{
+    name = \textit{Regex} - Expresión Regular,
+    sort = {regex},
+    description = {Secuencia de caracteres que especifica un patrón, combinación o formato a seguir por un string}
+}
+
 \glsaddallunused
