--- a/notes/main.tex
+++ b/notes/main.tex
@@ -60,7 +60,7 @@
 
 % ======================= INICIO DEL DOCUMENTO =======================
 \input{conceptos}
-\input{tipos}
+\input{class}
 \input{ciclo_datos}
 \input{destrezas}
 \input{herramientas}
@@ -68,7 +68,6 @@
 \input{prepare}
 \input{fases_add}
 \input{otros_f_add}
-\input{problemas}
 %\input{example} Ejemplo, se puede borrar
 
 \printglossary
