--- a/notes/otros_f_add.tex
+++ b/notes/otros_f_add.tex
@@ -12,3 +12,5 @@ Identificación del problema - Diseño de requisito de datos - Preprocesamiento 
 
 \subsection{Ciclo del Big Data}
 Evaluación del caso de negocio - Identificación de datos - Adquisición y Filtrado de Datos - Extracción de datos - Validación y Limpieza de datos - Agregación y representación de datos - Análisis de datos - Visualización de datos - Utilización de resultados del análisis
+
+\newpage
